--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/figlet": "^1.5.5",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
